; ModuleID = '/home/carl/AnghaBench/lab/engine/code/sys/extr_con_log.c_CON_LogSize.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/sys/extr_con_log.c_CON_LogSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@readPos = common dso_local global i64 0, align 8
@writePos = common dso_local global i64 0, align 8
@MAX_LOG = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CON_LogSize() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @readPos, align 8
  %3 = load i64, i64* @writePos, align 8
  %4 = icmp sle i64 %2, %3
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load i64, i64* @writePos, align 8
  %7 = load i64, i64* @readPos, align 8
  %8 = sub nsw i64 %6, %7
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %1, align 4
  br label %17

10:                                               ; preds = %0
  %11 = load i64, i64* @writePos, align 8
  %12 = load i64, i64* @MAX_LOG, align 8
  %13 = add nsw i64 %11, %12
  %14 = load i64, i64* @readPos, align 8
  %15 = sub nsw i64 %13, %14
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %10, %5
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
